--- a/modules/Lua/CMakeLists.txt
+++ b/modules/Lua/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(Lua INTERFACE)
 
-target_include_directories(Lua PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
+target_include_directories(Lua INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/include")
