--- a/modules/ScrapMechanic/CMakeLists.txt
+++ b/modules/ScrapMechanic/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(ScrapMechanic INTERFACE)
 
-target_include_directories(ScrapMechanic PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
+target_include_directories(ScrapMechanic INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/include")
